--- a/src/styles/upload.css
+++ b/src/styles/upload.css
@@ -3,14 +3,16 @@ main {
 }
 
 .mockup-content {
-  padding: 0 0 40px 0;
+  padding: 0 0 40px;
 }
-@media (min-width: 992px) {
+
+@media (width >= 992px) {
   .mockup-content {
     padding: 50px 100px;
   }
 }
-@media (min-width: 1440px) {
+
+@media (width >= 1440px) {
   .mockup-content {
     padding: 50px 200px;
     display: flex;
@@ -23,7 +25,7 @@ main {
   flex: 1 1 0%;
 }
 
-@media (min-width: 1440px) {
+@media (width >= 1440px) {
   .device-header {
     width: min(calc(100vw - 400px), 1270px);
     text-align: left;
@@ -34,31 +36,31 @@ main {
   flex: 1 1 0%;
 }
 
-@media (min-width: 992px) {
+@media (width >= 992px) {
   .mockup-lg {
     display: flex;
     column-gap: 20px;
   }
 }
 
-@media (min-width: 1440px) {
+@media (width >= 1440px) {
   .mockup-lg {
     width: 100%;
     max-width: 1270px;
   }
 }
 
-@media (min-width: 992px) {
+@media (width >= 992px) {
   .mockup-lg-left {
     flex: 1 1 0%;
     max-width: 800px;
   }
 }
 
-@media (min-width: 992px) {
+@media (width >= 992px) {
   .mockup-lg-right {
     flex: 1 1 0%;
-    margin: 0 0 0 0;
+    margin: 0;
     max-width: 450px;
   }
 }
@@ -71,9 +73,9 @@ main {
   padding: 20px;
 }
 
-@media (min-width: 992px) {
+@media (width >= 992px) {
   .device-header__name {
-    margin: 0 0 37px 0;
+    margin: 0 0 37px;
     font-size: 32px;
     line-height: 39px;
     padding: 0;
@@ -87,8 +89,9 @@ main {
   height: 100%;
   opacity: 20;
 }
+
 .drop-zone-overlay {
-  background-color: rgba(0, 67, 224, 0.8);
+  background-color: rgb(0 67 224 / 80%);
   position: fixed;
   width: 100%;
   height: 100%;
@@ -121,19 +124,16 @@ main {
   background-color: white;
 }
 
-@media (min-width: 992px) {
+@media (width >= 992px) {
   .device {
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.06);
+    box-shadow: 0 4px 4px rgb(0 0 0 / 6%);
     border-radius: 10px;
   }
 }
 
 .upload__inner-box {
   position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
+  inset: 0;
   margin: 15px;
   padding: 10px 20px;
 }
@@ -189,35 +189,35 @@ main {
   color: #b1b1b1;
 }
 
-@media (min-width: 680px) {
+@media (width >= 680px) {
   .upload__device-hint {
     font-size: 24px;
   }
 }
 
-@media (min-width: 1024px) {
+@media (width >= 1024px) {
   .upload__device-hint {
     font-size: 26px;
   }
 }
 
-@media (min-width: 1280px) {
+@media (width >= 1280px) {
   .upload__device-hint {
     font-size: 30px;
   }
 }
 
 .upload-guide {
-  background-color: rgba(0, 67, 224, 0.05);
+  background-color: rgb(0 67 224 / 5%);
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin: 12px 0 0 0;
+  margin: 12px 0 0;
   padding: 24px 12px;
-  color: rgba(0, 67, 224, 1);
+  color: rgb(0 67 224 / 100%);
   text-align: center;
-  border: 2px dashed rgba(0, 67, 224, 1);
+  border: 2px dashed rgb(0 67 224 / 100%);
   border-radius: 20px;
   box-sizing: border-box;
   cursor: pointer;
@@ -226,7 +226,7 @@ main {
 .upload-guide__title {
   font-weight: 700;
   font-size: 14px;
-  margin: 8px 0 0 0;
+  margin: 8px 0 0;
 }
 
 .upload-guide__hint {
@@ -234,16 +234,17 @@ main {
   font-weight: 400;
   line-height: 12px;
   color: #a4a4a4;
-  margin: 20px 0px 20px 0px;
+  margin: 20px 0;
 }
 
 .upload-guide__browse-btn {
   font-size: 12px;
   font-weight: 400;
-  color: rgba(0, 67, 224, 1);
+  color: rgb(0 67 224 / 100%);
   text-decoration: underline;
-  margin: 8px 0 0 0;
+  margin: 8px 0 0;
 }
+
 .upload-guide__browse-btn:hover {
   cursor: pointer;
 }
@@ -254,10 +255,7 @@ main {
 
 .uploading {
   position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
+  inset: 0;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -266,6 +264,7 @@ main {
   color: var(--white);
   text-align: center;
 }
+
 .uploading__spinner::before {
   content: "";
   display: block;
@@ -279,28 +278,30 @@ main {
 }
 
 .uploading__text {
-  margin: 35px 0 0 0;
+  margin: 35px 0 0;
   font-weight: 700;
   font-size: 18px;
 }
-@media (min-width: 992px) {
+
+@media (width >= 992px) {
   .uploading__text {
     font-size: 24px;
   }
 }
 
 .file-uploaded {
-  margin: 20px 20px 0 20px;
-  padding: 20px 20px 20px 20px;
+  margin: 20px 20px 0;
+  padding: 20px;
   background: var(--white);
   border: 1px solid var(--gray-5);
   box-sizing: border-box;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.06);
+  box-shadow: 0 4px 4px rgb(0 0 0 / 6%);
   border-radius: 10px;
 }
-@media (min-width: 992px) {
+
+@media (width >= 992px) {
   .file-uploaded {
-    margin: 0 0 20px 0;
+    margin: 0 0 20px;
     width: 100%;
   }
 }
@@ -327,23 +328,28 @@ main {
 
 .file-list {
   list-style: none;
-  margin: 0 0 0 0;
+  margin: 0;
   padding: 0;
 }
 
 .file-list::after {
   content: "";
   display: block;
-  margin: 0px -20px 0 -20px;
+  margin: 0 -20px;
   width: calc(100% + 40px);
   border-bottom: 1px solid var(--gray-5);
 }
 
-.file-list-item:first-child {
-  margin-top: 20px;
-}
-.file-list-item:last-child {
-  margin-bottom: 20px;
+.file-list-item__file-info {
+  margin: 8px 0 0;
+  border: 1px solid var(--gray-5);
+  border-radius: 10px;
+  padding: 12px;
+  box-shadow: 0 4px 10px 0 rgb(0 0 0 / 6%);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  flex: 1;
 }
 
 .file-list-item {
@@ -366,7 +372,7 @@ main {
   }
 }
 
-@media (max-width: 992px) {
+@media (width <= 992px) {
   .file-list-item {
     &.file-list-item__previewable {
       .file-list-item__file-info {
@@ -376,13 +382,21 @@ main {
   }
 }
 
+.file-list-item:first-child {
+  margin-top: 20px;
+}
+
+.file-list-item:last-child {
+  margin-bottom: 20px;
+}
+
 .file-list-item_left {
   width: 0;
 }
 
 .file-list-item__preview_selected,
 .file-list-item__preview_non_selected {
-  margin: 8px 0 0 0;
+  margin: 8px 0 0;
   padding-inline: 6px;
   width: 24px;
   display: flex;
@@ -394,24 +408,12 @@ main {
 
 .file-list-item__preview_selected {
   background-image: url("/images/preview-white.svg");
-  background-color: rgba(0, 67, 224, 1);
+  background-color: rgb(0 67 224 / 100%);
 }
 
 .file-list-item__preview_non_selected {
   background-image: url("/images/preview-gray.svg");
   background-color: white;
-}
-
-.file-list-item__file-info {
-  margin: 8px 0 0 0;
-  border: 1px solid var(--gray-5);
-  border-radius: 10px;
-  padding: 12px;
-  box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.06);
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  flex: 1;
 }
 
 .file-list-item__filename {
@@ -462,12 +464,15 @@ main {
   background-repeat: no-repeat;
   background-position: center;
 }
+
 .file-list-item--done .file-list-item__filename::before {
   background-image: url("/images/upload-done.svg");
 }
+
 .file-list-item--warning .file-list-item__filename::before {
   background-image: url("/images/upload-warning.svg");
 }
+
 .file-list-item--error .file-list-item__filename::before {
   background-image: url("/images/upload-error.svg");
 }
@@ -485,18 +490,19 @@ main {
 }
 
 .file-list-item__hint {
-  margin: 5px 0 0 0;
+  margin: 5px 0 0;
   font-size: 12px;
   color: var(--gray-3);
 }
 
 .color-section {
-  margin: 20px 0 0 0;
+  margin: 20px 0 0;
 }
+
 .color-section::after {
   content: "";
   display: block;
-  margin: 0px -20px 0 -20px;
+  margin: 0 -20px;
   width: calc(100% + 40px);
   border-bottom: 1px solid var(--gray-5);
 }
@@ -510,7 +516,7 @@ main {
 }
 
 .color-section__description {
-  margin: 12px 0 0 0;
+  margin: 12px 0 0;
   font-size: 14px;
   font-weight: 400;
   line-height: 17px;
@@ -529,7 +535,7 @@ main {
 }
 
 .color-picker-scrollable {
-  margin: 0 0 8px 0;
+  margin: 0 0 8px;
   overflow: scroll;
   -ms-overflow-style: none;
   scrollbar-width: none;
@@ -561,15 +567,16 @@ main {
   background-color: #f3f2ed;
   border: 3px #e4e4e4 solid;
 }
+
 .color-picker-item:focus {
   outline: none;
 }
 
-.color-picker-item--selected:hover {
+.color-picker-item--selected {
   border: 3px #0043e0 solid;
 }
 
-.color-picker-item--selected {
+.color-picker-item--selected:hover {
   border: 3px #0043e0 solid;
 }
 
@@ -584,7 +591,7 @@ main {
 }
 
 .generate-btn {
-  margin: 20px 0 0 0;
+  margin: 20px 0 0;
   padding: 8px 50px;
   width: 100%;
   background: var(--black);
@@ -595,32 +602,35 @@ main {
   text-align: center;
   color: var(--white);
 }
+
 .generate-btn:disabled {
   background: var(--gray-4);
 }
+
 .generate-btn:not(:disabled):hover {
   cursor: pointer;
 }
 
 .device-info {
-  margin: 20px 20px 20px 20px;
+  margin: 20px;
   padding: 20px;
   background: var(--white);
   border: 1px solid var(--gray-5);
   box-sizing: border-box;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.06);
+  box-shadow: 0 4px 4px rgb(0 0 0 / 6%);
   border-radius: 10px;
 }
-@media (min-width: 992px) {
+
+@media (width >= 992px) {
   .device-info {
-    margin: 0 0 20px 0;
+    margin: 0 0 20px;
   }
 }
 
 .device-support::after {
   content: "";
   display: block;
-  margin: 20px -20px 0 -20px;
+  margin: 20px -20px 0;
   width: calc(100% + 40px);
   border-bottom: 1px solid var(--gray-5);
 }
@@ -631,6 +641,7 @@ main {
   font-weight: bold;
   font-size: 14px;
 }
+
 .device-support__heading::before {
   content: "";
   display: block;
@@ -646,16 +657,18 @@ main {
 .device-support__orientation-list {
   list-style: none;
   display: flex;
-  margin: 15px 0 0 0;
+  margin: 15px 0 0;
   padding: 0;
   overflow: scroll;
   -ms-overflow-style: none;
   scrollbar-width: none;
 }
+
 .device-support__orientation-list::-webkit-scrollbar {
   display: none;
 }
-@media (min-width: 992px) {
+
+@media (width >= 992px) {
   .device-support__orientation-list {
     flex-wrap: wrap;
     margin: 5px 0 0 -10px;
@@ -669,20 +682,23 @@ main {
   object-fit: contain;
   background: var(--white);
 }
+
 .device-support__orientation-image:not(:first-child) {
   margin: 0 0 0 10px;
 }
-@media (min-width: 992px) {
+
+@media (width >= 992px) {
   .device-support__orientation-image {
     margin: 10px 0 0 10px;
   }
+
   .device-support__orientation-image:not(:first-child) {
     margin: 10px 0 0 10px;
   }
 }
 
 .device-credits {
-  padding: 20px 0 0 0;
+  padding: 20px 0 0;
 }
 
 .device-credits__heading {
@@ -691,6 +707,7 @@ main {
   font-weight: bold;
   font-size: 14px;
 }
+
 .device-credits__heading::before {
   content: "";
   display: block;
@@ -704,7 +721,7 @@ main {
 }
 
 .device-credits__desc p {
-  margin: 10px 0 0 0;
+  margin: 10px 0 0;
 }
 
 .device-credits__desc a {
@@ -716,10 +733,7 @@ main {
 .generating-modal {
   z-index: 200;
   position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
+  inset: 0;
 }
 
 .generating-modal__overlay {
@@ -756,14 +770,14 @@ main {
 }
 
 .generating-modal-dialog__text {
-  margin: 35px 0 0 0;
+  margin: 35px 0 0;
   color: var(--gray-1);
   font-weight: 700;
   font-size: 24px;
 }
 
 .generating-modal-dialog__cancel-btn {
-  margin: 20px 0 0 0;
+  margin: 20px 0 0;
   padding: 8px 100px;
   background: var(--white);
   border: 1px solid var(--black);
@@ -773,6 +787,7 @@ main {
   font-size: 14px;
   color: var(--black);
 }
+
 .generating-modal-dialog__cancel-btn:hover {
   cursor: pointer;
 }
@@ -781,25 +796,28 @@ main {
   0% {
     transform: rotate(0deg);
   }
+
   100% {
     transform: rotate(360deg);
   }
 }
 
 .request-device-section {
-  margin: 0 20px 20px 20px;
+  margin: 0 20px 20px;
   min-width: none !important;
   width: auto !important;
+
   /* width: 100% !important; */
   padding: 56px 40px !important;
 }
-@media (min-width: 992px) {
+
+@media (width >= 992px) {
   .request-device-section {
     margin: 0;
   }
 }
 
-@media (min-width: 992px) {
+@media (width >= 992px) {
   .request-device-section {
     width: 100%;
     padding: 60px 200px;
@@ -813,11 +831,10 @@ main {
 }
 
 .request-device-section__desc {
-  margin: 20px 0 0 0 !important;
+  margin: 20px 0 0 !important;
   font-size: 14px !important;
   font-weight: 700 !important;
   line-height: 22px !important;
-
   text-align: center;
   color: var(--black);
 }
@@ -825,12 +842,13 @@ main {
 .request-device-section__image--tall {
   display: none !important;
 }
+
 .request-device-section__image--flat {
   display: block !important;
 }
 
 .request-device-section__request-link {
-  margin: 10px 0 0 0 !important;
+  margin: 10px 0 0 !important;
 }
 
 .request-device-section__request-btn {
