--- a/src/pages/developerTools/developer-tools-card.css
+++ b/src/pages/developerTools/developer-tools-card.css
@@ -1,8 +1,9 @@
-@keyframes slideIn {
+@keyframes slide-in {
   0% {
     transform: translateY(10%);
     opacity: 0;
   }
+
   100% {
     transform: translateY(0);
     opacity: 1;
@@ -10,12 +11,12 @@
 }
 
 .developer-tools-card {
-  border: 1px solid rgba(0, 0, 0, 0.1);
+  border: 1px solid rgb(0 0 0 / 10%);
   border-radius: 12px;
   background-color: white;
   padding: 20px;
   height: 100%;
-  font-family: "Red Hat Display";
+  font-family: "Red Hat Display", monospace;
   display: flex;
   flex-direction: column;
   opacity: 0;
@@ -57,9 +58,9 @@
 
 .developer-tools-card:hover {
   cursor: pointer;
-  box-shadow: 0px 4px 24px rgba(0, 0, 0, 0.16);
+  box-shadow: 0 4px 24px rgb(0 0 0 / 16%);
 }
 
 .developer-tools-card.animate {
-  animation: slideIn 0.3s ease-in-out forwards;
+  animation: slide-in 0.3s ease-in-out forwards;
 }
