Move public/scripts/home.js to src/pages and update to use package for algolia

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,7 +17,7 @@ const brandItems = getBrandItems(DEVICE_MANAGER);
     window.modelItems = modelItems;
     window.brandItems = brandItems;
   </script>
-  <script type="text/javascript" src="/scripts/home.js"></script>
+  <script src="./_home.js"></script>
   <div class="landing-content">
     <header class="headline">
       <h2 class="headline__title">
